# surreal-axum

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  error.rs  main.rs
src/_dev_utils/: mod.rs
src/ctx/: error.rs  mod.rs
src/model/: error.rs  mod.rs  task.rs
src/model/store/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  static_routes.rs
web-folder/: index.html
