[package]
name = "surreal-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

surrealdb = { version = "1", features = ["kv-rocksdb", "kv-mem"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"

uuid = "1"
strum_macros = "0.25.2"
async-trait = "0.1"
once_cell = "1.18.0"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
